# Lab3_Part2

./: CMakeLists.txt  doxygen_doc.conf
doc/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  README_8md.html  README_8md_source.html  annotated.html  classes.html  classparticipante-members.html  classparticipante.html  config__tty_8cpp.html  config__tty_8cpp_8o_8d.html  config__tty_8cpp_8o_8d_source.html  config__tty_8cpp_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_446fa3779613ae65430f5581e4f4637e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7b6a6a8d016e61851534849ba32b4bd8.html  dir_7bab799fdbb90edfd4c11fb7cf541797.html  dir_a7ad92605c0732c583ab23ed7e226220.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_eccbd31e04adad31ae87f1c0b5537211.html  files.html  funciones__grx_8cpp.html  funciones__grx_8cpp_8o_8d.html  funciones__grx_8cpp_8o_8d_source.html  funciones__grx_8cpp_source.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  lib__grupox_8h.html  lib__grupox_8h_source.html  main_8cpp.html  main_8cpp_8o_8d.html  main_8cpp_8o_8d_source.html  main_8cpp_source.html  (+9 more)
doc/latex/: classparticipante.tex  config__tty_8cpp_8o_8d.tex  dir_017ad5e908c41501f6a06b5119b37293.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7bab799fdbb90edfd4c11fb7cf541797.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.aux  (+12 more)
include/: lib_grupox.h
src/: funciones_grx.cpp  main.cpp  participant.cpp
(+17 files in other folders)
